--- a/A05/speakers/sorkin.html
+++ b/A05/speakers/sorkin.html
@@ -12,7 +12,7 @@
 	    <h1>Andrew Ross Sorkin</h1>
 	    <h2>This page is under construction.</h2>
         <p>
-            <a href="/A05/c3_index.html">Return to index page.</a>
+            <a href="/A05/A05/index.html">Return to index page.</a>
         </p>	        
     </main>
 </body>
